--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.ultralytics.ultralytics_yolo">
+  package="com.leeclayberg.ultralytics_flutter">
 </manifest>
