--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -36,7 +36,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.ultralytics.ultralytics_yolo_example"
+        applicationId "com.leeclayberg.ultralytics_flutter_example"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion 26
