--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ultralytics.ultralytics_yolo_example">
+    package="com.leeclayberg.ultralytics_flutter_example">
 
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
    <application
-        android:label="ultralytics_yolo_example"
+        android:label="ultralytics_flutter_example"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
