--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: ultralytics_yolo_example
-description: Demonstrates how to use the ultralytics_yolo plugin.
+name: ultralytics_flutter_example
+description: Demonstrates how to use the ultralytics_flutter plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -18,7 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  ultralytics_yolo:
+  ultralytics_flutter:
     path: ../
   path: ^1.8.2
   path_provider: ^2.0.11
